# rlhabitt

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  implementation_summary.md  nginx-fix.sh  plan.md  pyproject.toml
app/: .env.example  README.md
app/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  index.css  routeSchema.ts  router.tsx
app/frontend/src/components/: CustomTooltip.tsx  EmailPreviewModal.tsx  Header.tsx  Layout.tsx  MonthGrid.css  MonthGrid.tsx  NotificationsBar.tsx  ReservationCell.tsx  TimeframeSelector.tsx
app/frontend/src/hooks/queries/: useApartments.ts  useBookingDetail.ts  useBuildings.ts  useCommunications.ts  useImport.ts  useOwners.ts  useReservationDetail.ts  useReservations.ts
app/frontend/src/lib/api/: commsClient.ts  importClient.ts
app/frontend/src/lib/supabase/: README.md  client.ts  database.types.ts
app/frontend/src/pages/: ApartmentDetail.tsx  Apartments.tsx  BookingDetail.tsx  CommunicationDetail.tsx  Communications.tsx  Home.tsx  Import.tsx  Login.tsx  MonthlyBreakdown.tsx  OwnerDetail.tsx  ReservationDetail.tsx  ReservationsGrid.tsx
app/frontend/src/store/: auth.ts  notificationStore.ts
app/supabase/migrations/: 001_create_initial_schema.sql  002_insert_initial_data.sql  007_create_import_helper_functions.sql  008_simplify_booking_schema.sql  009_add_correlation_id_to_import_logs.sql  010_add_comment_to_bookings.sql  011_add_communications_tables.sql  012_rename_metadata_fields.sql  013_create_public_users_table.sql  014_add_monthly_report_comm_type.sql  016_add_performance_indexes.sql
examples/: parse_condo_sheet.py  read_color_legend.py  simple_download.py  xlsx_analyzer.py
rlhabitt_backend/: pyproject.toml
scripts/: README.md  nginx-fix.sh  update-remote.sh
sheet_parser/: .env.example  DOCKER_DEPLOYMENT.md  Dockerfile  Procfile  README.md  deploy.sh  import_data.py  pyproject.toml  requirements.txt  update_requirements.sh  wsgi.py
sheet_parser/src/: __main__.py  api_server.py  auth.py  db.py  downloader.py  logger.py  models.py  postgres_importer.py  scheduled_import.py  supabase_importer.py  xlsx_parser.py
sheet_parser/src/api/: app.py  auth.py  cache.py  communication_routes.py  import_routes.py  onedrive_auth_route.py  reservation_routes.py
sheet_parser/src/comms/: README.md
sheet_parser/src/comms/infrastructure/: db_connection.py  db_repository.py  email_sender.py
sheet_parser/src/comms/scripts/: queue_communications.py  send_communications.py
sheet_parser/src/comms/service/: communications_service.py
sheet_parser/src/comms/templates/emails/: monthly_report_es.html  new_booking_es.html
src/: __main__.py  auth.py  downloader.py  main.py  xlsx_parser.py
src/api/: __init__.py  app.py  auth.py
