[tool.poetry]
name = "sheet_parser"
version = "0.1.0"
description = "Download and parse condo rental Excel sheets from OneDrive"
authors = ["User"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
msal = "^1.32.0"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
openpyxl = "^3.1.5"
flask = "^3.0.3"
gunicorn = "^21.2.0"
supabase = "^2.15.0"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
flask-cors = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sheet_parser_cli = "sheet_parser.src.__main__:main"
sheet_parser_api = "sheet_parser.src.api_server:main"